just a achange in wording

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <section class="section-1-container">
-        <h1 class="heading">Popular Meals</h1>
+        <h1 class="heading">Popular Meals Available</h1>
         <div class="main-card">
             <div class="card">
                 <img src="./Asset/card-img-1.png">
